Added raw gateway open and close events to CatnipHook. Extension.injectOptions method now has a `UnaryOperator<CatnipOptions>` parameter with a `Function<T, T>` fallback for extending classes. CatnipShardImpl `id` and `total` variables with `shardInfo()` method replaced with shardInfo variable. ShardInfo#toString() = id/total, mainly for CatnipShardImpl logging DefaultLogAdaptor#stackWalker no longer shows reflection frames.